crates/math-core/tests/snapshots/error_test__operatorname_left_right.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\left(\\operatorname{hello\\right)"
---
Error: Expected argument but got closing token (`}`, `\end`, `\right`).
   ╭─[ <input>:1:26 ]
   │
 1 │ \left(\operatorname{hello\right)
   │                          ───┬──  
   │                             ╰──── expected an argument here
───╯
